# bleve-issue-example

./: BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
app/: BUILD.bazel
